# cubeSDL

./: .gitignore  CMakeLists.txt  Makefile  README.md  array.c  array.h  display.c  display.h  main.c  matrix.c  mesh.c  mesh.h  triangle.c  triangle.h  vector.c  vector.h
include/Graphics/: Mesh.h  OBJLoader.h  Renderer.h
include/Math/: Vec2.h  Vec3.h
src/: Mesh.cpp  main.cpp
